test/2-error/num-literal-double-dot-leading.test
{
  'compile-err': '''\
parse error: test/2-error/num-literal-double-dot-leading.ploy:1:1-3: repeated '.' in number literal.
  .0.0
  ~~~
''',
  'compile-code': 1
}
